Better session management

--- a/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Index.cshtml
+++ b/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Index.cshtml
@@ -28,4 +28,5 @@
 </div>
 <input type="hidden" id="hdnFirstAssistantMessage" value="I am a tech support agent. How can I help you?" />
 <input type="hidden" id="hdnChatHubUrl" value="/myChatHub" />
+<input type="hidden" id="hdnSessionId" value="@Model.SessionId" />
 <script src="~/js/chat-component.js"></script>
