--- a/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Shared/_Layout.cshtml
+++ b/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Shared/_Layout.cshtml
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SimpleDotNetOpenAiChat.SampleWebClient.styles.css" asp-append-version="true" />
-    <script defer src="~/js/fontawesome/fontawesome.js"></script>
-    <script src="~/js/fontawesome/brands.js"></script>
-    <script src="~/js/fontawesome/solid.js"></script>
+    <script defer src="~/js/fontawesome/fontawesome.min.js"></script>
+    <script src="~/js/fontawesome/solid.min.js"></script>
 </head>
 <body>
     <header>
