chat-component.js cdn version # update

--- a/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Index.cshtml
+++ b/SimpleDotNetOpenAiChat.SampleWebClient/Pages/Index.cshtml
@@ -29,4 +29,4 @@
 <input type="hidden" id="hdnFirstAssistantMessage" value="I am a tech support agent. How can I help you?" />
 <input type="hidden" id="hdnChatHubUrl" value="/myChatHub" />
 <input type="hidden" id="hdnSessionId" value="@Model.SessionId" />
-<script src="https://cdn.jsdelivr.net/gh/blurred83/SimpleDotNetOpenAiChat@v1.0.0-alpha/js/chat-component.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/blurred83/SimpleDotNetOpenAiChat@v1.0.0-alpha.1/js/chat-component.js"></script>
