Updated client js reference to .3

--- a/SimpleDotNetOpenAiChat.SampleWebClient/Pages/TechSupport.cshtml
+++ b/SimpleDotNetOpenAiChat.SampleWebClient/Pages/TechSupport.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Tech Support</h1>
     <p>Chat with the agent in the bottom right corner. It can provide tech support.</p>
 </div>
 
@@ -29,4 +29,4 @@
 <input type="hidden" id="hdnFirstAssistantMessage" value="I am a tech support agent. How can I help you?" />
 <input type="hidden" id="hdnChatHubUrl" value="/techSupportHub" />
 <input type="hidden" id="hdnSessionId" value="@Model.TechSupportSessionId" />
-<script src="https://cdn.jsdelivr.net/gh/blurred83/SimpleDotNetOpenAiChat@v1.0.0-alpha.2/js/chat-component.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/blurred83/SimpleDotNetOpenAiChat@v1.0.0-alpha.3/js/chat-component.js"></script>
